--- a/comando_php/css/css.css
+++ b/comando_php/css/css.css
@@ -2,3 +2,10 @@
     text-align: center;
     font-size: 100px;
 }
+/* botao de ir para tabela */
+.botao-ir-tabela{
+    position: absolute;
+    font-size: 100px;
+    
+}
+/* fim */
