melhorias na pesquisa do nav bar
Proximas melhorias vai ser no perfil do gerente logado no dashboard

--- a/css_dash/caixa_estilo.css
+++ b/css_dash/caixa_estilo.css
@@ -1618,7 +1618,7 @@ Top Header
 }
 
 .navigation-horizontal .submenu .nav .nav-item .nav-link:hover {
-    color: #3d405c;
+    color: #ffffff;
     border-radius: 2px;
     background-color: transparent;
 }
@@ -1694,7 +1694,7 @@ Left Navigation Sidebar
     font-size: 14px;
     padding: 12px;
     /* margin-bottom: 2px; */
-    color: #71789e;
+    color: #ffffff;
     transition: 0.3s;
 }
 
@@ -1760,39 +1760,7 @@ Left Navigation Sidebar
 }
 /* ----------------------- 
 Leftsidebar - Primary
-------------------------- */
 
-.sidebar-primary {
-    background-color: #414da7;
-}
-
-.sidebar-primary .nav-divider {
-    color: #ddddff;
-}
-
-.sidebar-primary.nav-left-sidebar .nav-link i {
-    color: #8991d4;
-}
-
-.sidebar-primary.nav-left-sidebar .navbar-nav .nav-item {}
-
-.sidebar-primary.nav-left-sidebar .navbar-nav .nav-link {
-    color: #8991d4;
-}
-
-.sidebar-primary.nav-left-sidebar .navbar-nav .nav-link:focus,
-.sidebar-primary.nav-left-sidebar .navbar-nav .nav-link:hover {
-    color: #fff;
-    background-color: #5761c2;
-    border-radius: 2px;
-}
-
-.sidebar-primary.nav-left-sidebar .navbar-nav .nav-link:focus,
-.sidebar-primary.nav-left-sidebar .navbar-nav .nav-link.active {
-    background-color: #5761c2;
-    color: #fff;
-    border-radius: 2px;
-}
 
 .sidebar-primary.nav-left-sidebar .submenu .nav .nav-item .nav-link:hover {
     color: #fff;
@@ -1813,13 +1781,17 @@ Leftsidebar - dark
 }
 
 .sidebar-dark .nav-divider {
-    color: #a4aadb;
-    font-size: 12px;
-    letter-spacing: 1px;
+    color: #ffffff;
+    font-size: 15px;
+    letter-spacing: 2px;
+}
+.sidebar-dark .nav-divider:hover {
+    color: #93fbfb;
+
 }
 
 .sidebar-dark.nav-left-sidebar .nav-link i {
-    color: #7a80b4;
+    color: #242849;
 }
 
 .sidebar-dark.nav-left-sidebar .navbar-nav .nav-item {}
@@ -1832,7 +1804,7 @@ Leftsidebar - dark
 .sidebar-dark.nav-left-sidebar .navbar-nav .nav-link:hover {
     color: #fff;
     background-color: #242849;
-    border-radius: 2px;
+    border-radius: 5px;
 }
 
 .sidebar-dark.nav-left-sidebar .navbar-nav .nav-link:focus,
