concluido tela modal
Proxima etapa é a tela do adm, cadastrar, login na tela superior e dados da empresa

--- a/css_dash/tabela_estilo.css
+++ b/css_dash/tabela_estilo.css
@@ -4,7 +4,15 @@
 
 }
 
-
+/* esconde o titulo atual */
+button.botao:hover span.titulo {
+    display: none
+  }
+  
+  /* "substitui" o titulo */
+  button.botao:hover:before {
+    content: "Excluir 30 Rg."
+  }
 
 /* botao com efeito de brilho */
 /* .custom-btn {
