Formulario do funcionario concluido
prroxima etapa, cadastrar no banco junto com a imagem

--- a/css_dash/tabela_estilo.css
+++ b/css_dash/tabela_estilo.css
@@ -6,7 +6,9 @@
 
 /* esconde o titulo atual */
 button.botao:hover span.titulo {
-    display: none
+    display: none;
+   
+    
   }
   
   /* "substitui" o titulo */
